changed alerts to toast messages, fixed route functionality