@@ -2,7 +2,7 @@ package com.app.utils.converters;
 
 import com.app.dto.RouteDto;
 import com.app.model.Route;
-import com.app.model.RoutePoints;
+import com.app.model.RoutePoint;
 import com.app.model.Vehicle;
 import com.app.service.VehicleService;
 import org.springframework.core.convert.converter.Converter;
@@ -10,7 +10,6 @@ import org.springframework.stereotype.Component;
 
 import java.util.HashMap;
 import java.util.List;
-import java.util.stream.Collectors;
 
 @Component
 public class RouteDtoToRoute implements Converter<RouteDto, Route> {
@@ -23,33 +22,36 @@ public class RouteDtoToRoute implements Converter<RouteDto, Route> {
 
     @Override
     public Route convert(RouteDto source) {
+        Route route = new Route();
+        route.setId(source.getId());
+        route.setDistance(source.getDistance());
+        route.setEstimatedTime(source.getEstimatedTime());
+        route.setStartTime(source.getStartTime());
+        route.setEndTime(source.getEndTime());
+        route.setStatus(source.getStatus());
+        route.setCreatedAt(source.getCreatedAt());
+        route.setUserId(source.getUserId());
+
         HashMap<String, String> vehiclePlate = new HashMap<>();
         vehiclePlate.put("licensePlate", source.getLicensePlate());
         Vehicle vehicle;
         if (vehicleService.searchVehicles(1, vehiclePlate).stream().findFirst().isPresent()) {
             vehicle = vehicleService.searchVehicles(1, vehiclePlate).stream().findFirst().get();
         } else return null;
-        List<RoutePoints> waypoints = source.getWaypoints().stream()
+
+        List<RoutePoint> waypoints = source.getWaypoints().stream()
                 .map(w -> {
-                    RoutePoints routePoint = new RoutePoints();
-                    routePoint.setId(w.getId());
+                    RoutePoint routePoint = new RoutePoint();
                     routePoint.setName(w.getName());
                     routePoint.setLatitude(w.getLatitude());
                     routePoint.setLongitude(w.getLongitude());
-                    routePoint.setRoute(w.getRoute());
+                    routePoint.setSequence(w.getSequence());
+                    routePoint.setRoute(route);
                     return routePoint;
-                }).collect(Collectors.toList());
-        return new Route(
-                source.getId(),
-                source.getDistance(),
-                source.getEstimatedTime(),
-                source.getStartTime(),
-                source.getEndTime(),
-                source.getStatus(),
-                source.getCreatedAt(),
-                vehicle,
-                waypoints,
-                source.getUserId()
-        );
+                }).toList();
+
+        route.setVehicle(vehicle);
+        route.setWaypoints(waypoints);
+        return route;
     }
 }
